style: align set items correctly

--- a/src/ui/root/workouts/lift.module.css
+++ b/src/ui/root/workouts/lift.module.css
@@ -26,7 +26,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   gap: 10px;
   margin: 5px 0px;
 }
